--- a/fourth.html
+++ b/fourth.html
@@ -40,7 +40,7 @@
                     close
                     </span>
             </a>
-            <input id="text"  type="text" placeholder="Learn Python">
+            <input id="text"  type="text" placeholder="Learn c++">
            <div id="bottom">
             <input  type="submit" value="+ Add Task">
            </div>
